syntax = "proto3";

option csharp_namespace = "NB.Discounts.Api";

package discounts;

service DiscountService {
  rpc Generate (GenerateRequest) returns (GenerateResponse);
  rpc UseCode (UseCodeRequest) returns (UseCodeResponse);
}

message GenerateRequest {
  uint32 count  = 1;
  uint32 length = 2;
}

message GenerateResponse {
  bool result = 1;
}

message UseCodeRequest {
  string code = 1;
}

message UseCodeResponse {
  uint32 result_code = 1;
}
